# various-things

./: docker_desktop_compress.ps1  torguard_proxy_url_generator.py
bash/: nccp.sh
bash/docker-postgresql-backup/: Dockerfile  README.md  backup.sh  crontab.txt  fly.toml
compress_images/: compress_images.py
fitness_faker/: fitness_faker.py
fly/: README.md
fly/archisteamfarm/: README.md  fly.toml
fly/postgres-backup/: Dockerfile  backup.js  crontab  fly.toml
fly/redis/: Dockerfile  README.md  fly.toml  start-redis-server.sh
fly/uptime-kuma/: README.md  fly.toml
fly/vaultwarden/: fly.toml
fly/wakapi/: fly.toml
fly/workflow/: deploy-to-fly.yml
html/: nothing.html
javascript/: humble_bundle_key_helper.user.js
python/: README.md  compress_images.py  fitness_faker.py  shift_redeemer.py  torguard_proxy_generator.py
python/fitness-faker/: fitness_faker.py  pyproject.toml
python/flexispot-clicker/: main.py  pyproject.toml
python/shift-redeemer/: pyproject.toml  shift_redeemer.py
python/wanderinginn-class-analyzer/: README.md  analyze.py  requirements.txt
staiy_video_sheet_linker/: .gitignore  README.md  linker.ts  package.json
