[tool.poetry]
name = "shift-redeemer"
version = "0.1.0"
description = ""
authors = ["Curetix <me@curetix.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
webdriver-manager = "^4.0.1"
selenium = "^4.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
